--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,28 +31,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/body"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/green"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/footer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header_title">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#C3C3C3"
-            android:padding="40dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/footer"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -79,6 +57,21 @@
             android:layout_marginStart="10dp"
             android:padding="15dp"
             android:text="Популярное" />
+
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/Fragments"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/green"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/footer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header_title"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
