--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="red">#ffff0000</color>
     <color name="green">#ff00ff00</color>
     <color name="blue">#ff0000ff</color>
+    <color name="holo_blue_light">#33B5E5</color>
+    <color name="holo_blue_dark">#2F81A8</color>
 </resources>
