--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -13,30 +13,18 @@
         android:id="@+id/FavoritesFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#C3C3C3"
+        android:background="#FFFFFF"
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/FavoritesText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="30dp"
-            android:paddingTop="20dp"
-            android:paddingRight="30dp"
-            android:paddingBottom="10dp"
-            android:text="Избраное"
-            android:textSize="20sp"
-            android:textStyle="italic" />
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/PopularRecyclerView"
+            android:id="@+id/FavoriteRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#C3C3C3"
-            android:paddingLeft="40dp"
+            android:background="#FFFFFF"
+            android:paddingLeft="20dp"
             android:paddingTop="20dp"
-            android:paddingRight="40dp"
+            android:paddingRight="20dp"
             android:paddingBottom="40dp" />
 
     </LinearLayout>
