--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -21,28 +21,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header_title">
 
-        <TextView
-            android:id="@+id/PopularText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="30dp"
-            android:paddingTop="20dp"
-            android:paddingRight="30dp"
-            android:paddingBottom="10dp"
-            android:password="false"
-            android:text="Популярное"
-            android:textSize="20sp"
-            android:textStyle="italic" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/PopularRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#C3C3C3"
-            android:paddingLeft="40dp"
-            android:paddingTop="20dp"
-            android:paddingRight="40dp"
-            android:paddingBottom="40dp" />
+            android:background="#FFFFFF"
+            android:paddingLeft="20dp"
+            android:paddingTop="1dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="10dp" />
     </LinearLayout>
 
 </FrameLayout>
