--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,89 +1,116 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/filmLayout"
+
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
-    android:background="@drawable/rounded_border"
-    android:gravity="center"
-    android:orientation="horizontal"
-    android:padding="6dp">
-
-    <TextView
-        android:id="@+id/nameView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.3"
-        android:padding="20dp"
-        android:text="Item Title"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="4dp"
+    android:layout_margin="6dp"
+    android:background="@drawable/border_items">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:id="@+id/filmLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.25"
-        android:gravity="right"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="6dp">
 
         <TextView
-            android:id="@+id/textGenre"
-            android:layout_width="match_parent"
+            android:id="@+id/nameView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center|right"
-            android:padding="10dp"
-            android:text="TextView" />
+            android:layout_weight="0.3"
+            android:padding="20dp"
+            android:text="Item Title"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="0.25"
             android:gravity="right"
-            android:orientation="horizontal"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/ratingIMDBView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="IMDB: "
-                android:textSize="8sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/ratingIMDB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="6dp"
-                android:text="0"
-                android:textSize="8sp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView3"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="6dp"
-                android:paddingEnd="6dp"
-                android:text="|"
-                android:textSize="8sp" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="right">
 
-            <TextView
-                android:id="@+id/ratingKinoPoiskView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="КиноПоиск:"
-                android:textSize="8sp"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/textGenre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|right"
+                    android:padding="10dp"
+                    android:text="TextView" />
 
-            <TextView
-                android:id="@+id/ratingKinoPoisk"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:orientation="horizontal"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp">
+
+                    <TextView
+                        android:id="@+id/ratingIMDBView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="IMDB: "
+                        android:textSize="8sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/ratingIMDB"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="6dp"
+                        android:text="0"
+                        android:textSize="8sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="6dp"
+                        android:paddingEnd="6dp"
+                        android:text="|"
+                        android:textSize="8sp" />
+
+                    <TextView
+                        android:id="@+id/ratingKinoPoiskView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="КиноПоиск:"
+                        android:textSize="8sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/ratingKinoPoisk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="6dp"
+                        android:text="0"
+                        android:textSize="8sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/selectedItemImage"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="6dp"
-                android:text="0"
-                android:textSize="8sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                card_view:srcCompat="@android:drawable/btn_star" />
+
+
         </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
