--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,12 @@
         android:id="@+id/header_title"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FFFFFF"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
         android:gravity="right"
         android:orientation="horizontal"
-        android:paddingLeft="25dp"
-        android:paddingRight="20dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.05"
         app:layout_constraintHorizontal_bias="1.0"
@@ -38,21 +39,12 @@
             android:layout_height="match_parent"
             android:layout_weight="2" />
 
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="58dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="00:00:00"
-            android:textAlignment="center"
-            android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/footer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#FFFFFF"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -64,7 +56,6 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFFFFF"
             app:tabIndicatorHeight="0dp"
             app:tabIndicatorColor="@android:color/transparent"/>
 
@@ -74,6 +65,8 @@
         android:id="@+id/viewPagerFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
         app:layout_constraintBottom_toTopOf="@+id/footer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
