--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             android:textSize="17dp" />
 
         <SearchView
+            android:id="@+id/searchView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2" />
