--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.Fragments.PopularFragment">
+    tools:context=".presentation.Fragments.MainFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
-        android:id="@+id/PopularFragment"
+        android:id="@+id/MainFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
