--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.Fragments.FavoritesFragment">
+    tools:context=".presentation.Fragments.favoritesFragment.FavoritesFragment">
 
     <LinearLayout
         android:id="@+id/FavoritesFragment"
