--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".presentation.Fragments.favoritesFragment.FavoritesFragment">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/FavoritesFragment"
