--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,7 @@
                 android:id="@+id/navigationImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_weight="0.1"
                 app:srcCompat="@android:drawable/ic_menu_info_details" />
 
