--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="blue">#ff0000ff</color>
     <color name="holo_blue_light">#33B5E5</color>
     <color name="holo_blue_dark">#2F81A8</color>
+    <color name="line">#33000000</color>
 </resources>
