--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,8 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.First" parent="Base.Theme.First" />
+    <style name="Theme.First" parent="Base.Theme.First">
+
+    </style>
+
 </resources>
