--- a/app/src/main/res/layout/activity_description_film.xml
+++ b/app/src/main/res/layout/activity_description_film.xml
@@ -152,6 +152,34 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/comment_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                android:paddingStart="30dp"
+                android:paddingLeft="30dp"
+                android:paddingEnd="30dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="10dp">
+
+                <TextView
+                    android:id="@+id/comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Коментарий:" />
+
+                <TextView
+                    android:id="@+id/your_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="1"
+                    android:text="-" />
+
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
