--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,6 +9,7 @@
         android:id="@+id/PopularRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:paddingTop="1dp"
         android:paddingBottom="10dp" />
 
@@ -21,4 +22,28 @@
         android:visibility="gone"
         android:src="@drawable/ic_launcher_foreground"
         />
+    <LinearLayout
+        android:id="@+id/noInternet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/noInternetImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/oblachko"/>
+
+        <TextView
+            android:id="@+id/noInternetText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/noInternet"
+            android:textColor="@color/gray"
+            android:textStyle="bold" />
+    </LinearLayout>
 </FrameLayout>
