добавил выделение и удаление нескольких объектов из избранного

--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/FavoritesFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -21,6 +21,16 @@
             android:paddingTop="1dp"
             android:paddingBottom="10dp"  />
 
-    </LinearLayout>
-
+        <ImageButton
+            android:id="@+id/BtnDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:scaleY="0.6"
+            android:scaleX="0.6"
+            android:padding="0dp"
+            android:layout_margin="0dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/my_big_trash" />
+    </FrameLayout>
 </FrameLayout>
