--- a/app/src/main/res/drawable/border_item_selected.xml
+++ b/app/src/main/res/drawable/border_item_selected.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <solid android:color="@color/gray"/>
     <stroke android:width="2dp" android:color="#FF000000"/> <!-- Цвет и ширина границы -->
-    <corners android:radius="8dp"/> <!-- Радиус углов -->
+    <corners android:radius="7dp"/> <!-- Радиус углов -->
 </shape>
